[project]
name = "llm-cost-calculator"
version = "0.1.0"
description = "Service that tracks and optimizes LLM API costs with per-model analytics and budget alerts."
license = {text = "MIT"}
authors = [{name = "Marlon Barreto", email = "mbarretot@hotmail.com"}]
keywords = ["LLM", "cost-optimization", "AI", "token-tracking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
]

[project.urls]
Homepage = "https://github.com/marlonbarreto-git/llm-cost-calculator"
Repository = "https://github.com/marlonbarreto-git/llm-cost-calculator"
Issues = "https://github.com/marlonbarreto-git/llm-cost-calculator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cost_calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
